<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchAndMatch"
    android:background="@color/colorGlobalWhite">


    <LinearLayout
        android:id="@+id/llLayout"
        style="@style/MatchAndWrap"
        android:layout_marginTop="@dimen/dp_40"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/mTvTitle"
            style="@style/WrapAndWrap"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_30"
            android:text="@string/activity_login_title"
            android:textColor="@color/colorLoginTitle"
            android:textSize="@dimen/sp_28"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mTvSubTitle"
            style="@style/WrapAndWrap"
            android:layout_marginLeft="@dimen/dp_30"
            android:padding="@dimen/dp_10"
            android:text="@string/login_subtitle"
            android:textColor="@color/colorLoginSubTitle"
            android:textSize="@dimen/sp_14" />


        <LinearLayout
            style="@style/MatchAndWrap"
            android:layout_marginTop="@dimen/dp_30"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20">

            <TextView
                style="@style/WrapAndWrap"
                android:padding="@dimen/dp_5"
                android:text="@string/login_telephone_number_type_text"
                android:textColor="@color/colorLoginTitle"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <com.linwei.wsmaterialui.widget.ClearEditText
                android:id="@+id/mEtTelNumber"
                style="@style/MatchAndWrap.EditStyle"
                android:hint="@string/login_telephone_number_tips"
                android:inputType="number"
                app:cet_hintSize="@dimen/sp_12" />
        </LinearLayout>

        <View
            style="@style/HorizontalLine"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30" />

        <TextView
            android:id="@+id/mTvRetrieveNumber"
            style="@style/WrapAndWrap"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/dp_10"
            android:text="@string/login_retrieve_number"
            android:textColor="@color/colorLoginHighlightInfo"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>


    <Button
        android:id="@+id/mBtComplete"
        style="@style/MatchAndWrap.LoginButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/dp_30"
        android:text="@string/login_complete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>
