<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mLlRootView"
    style="@style/MatchAndMatch"
    android:background="@color/colorGlobalWhite"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mLlContentView"
        style="@style/MatchAndWrap"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mTvTitle"
            style="@style/MatchAndWrap"
            android:layout_marginTop="@dimen/dp_50"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/activity_verify_code_title"
            android:textColor="@color/colorLoginTitle"
            android:textSize="@dimen/sp_22"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mTvSubTitle"
            style="@style/MatchAndWrap"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/verify_code_subtitle"
            android:textColor="@color/colorLoginSubTitle"
            android:textSize="@dimen/sp_16" />

        <com.linwei.inputboxview.widget.VerifyCodeView
            android:id="@+id/mInputBoxView1"
            style="@style/WrapAndWrap"
            android:layout_marginTop="@dimen/dp_20"
            app:input_box_backgroud="@drawable/select_input_box_line_bg"
            app:input_box_cursor_type="@drawable/shape_input_box_cursor"
            app:input_box_number="4"
            app:input_box_spacing="5dp"
            app:input_box_text_color="@color/colorInputBoxTextColor"
            app:input_box_text_size="6sp"
            app:input_box_type="number"
            app:input_box_width="30dp" />


        <com.linwei.inputboxview.widget.VerifyCodeView
            android:id="@+id/mInputBoxView2"
            style="@style/WrapAndWrap"
            android:layout_marginTop="@dimen/dp_20"
            android:visibility="gone"
            app:input_box_backgroud="@drawable/select_input_box_rim_bg"
            app:input_box_cursor_type="@drawable/shape_input_box_cursor"
            app:input_box_number="4"
            app:input_box_spacing="5dp"
            app:input_box_text_color="@color/colorInputBoxTextColor"
            app:input_box_text_size="6sp"
            app:input_box_type="number"
            app:input_box_width="30dp" />


        <com.linwei.inputboxview.widget.VerifyCodeView
            android:id="@+id/mInputBoxView3"
            style="@style/WrapAndWrap"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/shape_input_box_bg"
            android:visibility="gone"
            app:input_box_backgroud="@color/colorWhite"
            app:input_box_cursor_type="@drawable/shape_input_box_cursor"
            app:input_box_number="6"
            app:input_box_spacing="1dp"
            app:input_box_text_color="@color/colorInputBoxTextColor"
            app:input_box_text_size="8sp"
            app:input_box_type="numberPassword"
            app:input_box_width="30dp" />

    </LinearLayout>

    <Button
        android:id="@+id/mBtComplete"
        style="@style/MatchAndWrap.LoginButtonStyle"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/dp_50"
        android:text="@string/login_complete_button" />
</LinearLayout>
